--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -5,8 +5,8 @@
 
 * Inbox
 * Next Action
-** TODO [#A] 完成每日日报                                             :work:
-DEADLINE: <2021-04-06 Tue 21:20 +1d>
+** TODO [#A] 完成每日日报                                            :work:
+SCHEDULED: <2021-04-06 周二 19:00 ++1d> DEADLINE: <2021-04-06 Tue 21:20 ++1d>
 :PROPERTIES:
 :LAST_REPEAT: [2021-04-03 Sat 00:52]
 :END:
@@ -19,35 +19,45 @@ DEADLINE: <2021-04-06 Tue 21:20 +1d>
 - State "DONE"       from "TODO"       [2021-03-31 周三 20:50]
 - State "DONE"       from "TODO"       [2021-03-30 周二 21:06]
 - State "DONE"       from "TODO"       [2021-03-29 周一 21:11]
-** TODO [#C] 完成leetcode一两道题                                    :learn:
-SCHEDULED: <2021-04-03 Sat 21:00 +1d>
+** TODO [#A] 完成每周周报                                            :work:
+SCHEDULED: <2021-04-05 周一 09:00 ++1w> DEADLINE: <2021-04-05 周一 12:00 ++1w>
+:PROPERTIES:
+:LAST_REPEAT: [2021-04-01 周四 10:22]
+:END:
+- State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
+** TODO [#A] 归档并回顾一周的计划                                   :learn:
+DEADLINE: <2021-04-04 Sun 23:00 ++1w> SCHEDULED: <2021-04-04 Sun 6:00 ++1w>
+** TODO [#C] 完成leetcode一两道题                                   :learn:
+SCHEDULED: <2021-04-04 周日 19:00 ++1d>
 :PROPERTIES:
 :LINK: [[https://leetcode-cn.com][leetcode]]
-:LAST_REPEAT: [2021-04-03 Sat 00:50]
+:LAST_REPEAT: [2021-04-03 周六 19:44]
 :END:
+- State "DONE"       from "TODO"       [2021-04-03 周六 19:44]
 - State "DONE"       from "TODO"       [2021-04-03 Sat 00:50]
 - State "DONE"       from "TODO"       [2021-04-02 Fri 00:52]
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** SCH [#A] 完成每周周报                                             :work:
-DEADLINE: <2021-04-05 周一 12:00 +1w>
+** TODO [#C] 学习 org-mode                                          :learn:
+SCHEDULED: <2021-04-04 周日 19:00 ++1d>
 :PROPERTIES:
-:LAST_REPEAT: [2021-04-01 周四 10:22]
+:LINK: [[https://orgmode.org/manual/index.html#SEC_Contents][org manual]]
+:LAST_REPEAT: [2021-04-03 周六 15:56]
 :END:
-- State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
+- State "DONE"       from "TODO"       [2021-04-03 周六 15:56]
 ** DONE [#A] 完成python考试                                          :work:
 CLOSED: [2021-04-01 周四 10:20] SCHEDULED: <2021-04-01 周四 09:30>
 :PROPERTIES:
 :DEPENDENCE:  [[完成python150题]] and [[学习《python核心编程》]]
 :END:
-** DONE [#A] 提交python作业
+** DONE [#A] 提交python作业                                          :work:
 CLOSED: [2021-03-31 周三 20:27] DEADLINE: <2021-03-31 周三 21:00>
 ** DONE [#A] 和导师会面                                              :work:
 CLOSED: [2021-03-29 周一 12:26] DEADLINE: <2021-03-29 周一 21:00>
 - Note taken on [2021-03-29 周一 12:25] \\
   导师没有特殊要求，按照新入入门导引学习即可。
-** DONE [#C] 编写cvimrc中有关vftplug插件的帮助文档
+** DONE [#C] 编写cvimrc中有关vftplug插件的帮助文档                  :learn:
 CLOSED: [2021-03-31 周三 12:44] DEADLINE: <2021-04-03 周六 22:00>
 * Appointment
 ** 组装一台性价比高的台式机用于开发和娱乐                            :learn:
@@ -71,32 +81,46 @@ CLOSED: [2021-03-31 周三 12:44] DEADLINE: <2021-04-03 周六 22:00>
 ** SCH [#A] 学习 利为游戏引擎                                       :learn:
 DEADLINE: <2021-04-10 周六 21:00> SCHEDULED: <2021-04-02 周五 09:00>
 :PROPERTIES:
-:LINK: [[../ref/liwei_engine.org][利为引擎]]
+:FILE: [[../ref/liwei_engine.org][利为引擎]]
 :END:
 *** DONE 利为引擎环境搭建
 CLOSED: [2021-04-02 周五 15:12] DEADLINE: <2021-04-02 周五 21:00>
 *** DONE 复刻简单游戏场景
 CLOSED: [2021-04-02 周五 22:02] DEADLINE: <2021-04-06 周二 21:00>
-** SCH [#A] 归档并回顾一周的计划                                     :learn:
-DEADLINE: <2021-04-04 Sun 23:00 +1w> SCHEDULED: <2021-04-04 Sun 6:00 +1w>
-** DONE [#B] 完成python150题 [100%]                                  :learn:
-CLOSED: [2021-04-01 周四 19:43] SCHEDULED: <2021-03-29 周一 11:00> DEADLINE: <2021-04-30 周五 21:00 -3d>
+*** TODO 渲染节点类
+DEADLINE: <2021-04-06 周二 21:00>
+*** TODO 对象生命周期管理
+DEADLINE: <2021-04-06 周二 21:00>
+*** WAIT 坐标系
+DEADLINE: <2021-04-07 周三 21:00>
+*** WAIT 触摸事件
+DEADLINE: <2021-04-07 周三 21:00>
+*** WAIT 定时器
+DEADLINE: <2021-04-08 周四 21:00>
+*** WAIT Action动画
+DEADLINE: <2021-04-08 周四 21:00>
+*** WAIT 动画类型简介
+DEADLINE: <2021-04-09 周五 21:00>
+*** WAIT Sprite3D简介
+DEADLINE: <2021-04-09 周五 21:00>
+** DONE [#B] 完成python150题 [100%]                                 :learn:
+CLOSED: [2021-04-01 周四 19:43] SCHEDULED: <2021-03-29 周一 11:00> DEADLINE: <2021-04-30 周五 21:00>
 *** DONE 完成1-30题
 CLOSED: [2021-03-29 周一 21:08] DEADLINE: <2021-03-29 周一 21:00>
 :PROPERTIES:
-:REFERENCE: [[file:../ref/python150题.org::第一题][python150题:1-30]]
+:FILE: [[file:../ref/python150题.org::第一题][python150题:1-30]]
 :END:
 - Note taken on [2021-03-31 周三 16:32] \\
   12题的描述非常不清晰.
 *** DONE 完成31-60题
 CLOSED: [2021-03-30 周二 14:40] DEADLINE: <2021-03-30 周二 21:00>
 :PROPERTIES:
-:REFERENCE: [[file:../ref/python150题.org::第三十一题][python150题:31-60]]
+:FILE: [[file:../ref/python150题.org::第三十一题][python150题:31-60]]
 :END:
 *** DONE 完成61-90题
 CLOSED: [2021-03-31 周三 16:32]
 :PROPERTIES:
-:REFERENCE: [[file:../ref/python150题.org::第六十一题][python150题:61-90]]
+:FILE: [[file:../ref/python150题.org::第六十一题][python150题:61-90]]
 :END:
 - Note taken on [2021-03-31 周三 12:51] \\
   61-69题为服务端相关题目, 均跳过.
@@ -104,12 +128,12 @@ DEADLINE: <2021-03-31 周三 21:00>
 *** DONE 完成91-120题
 CLOSED: [2021-03-31 周三 16:32] DEADLINE: <2021-04-01 周四 21:00>
 :PROPERTIES:
-:REFERENCE: [[file:../ref/python150题.org::第九十一题][python150题:91-120]]
+:FILE: [[file:../ref/python150题.org::第九十一题][python150题:91-120]]
 :END:
 *** DONE 完成121-150题
 CLOSED: [2021-04-01 周四 19:42]
 :PROPERTIES:
-:REFERENCE: [[file:../ref/python150题.org::第一百二十一题][python150题:121-150]]
+:FILE: [[file:../ref/python150题.org::第一百二十一题][python150题:121-150]]
 :END:
 ** DONE [#B] 学习《python核心编程》[100%]                           :learn:
 CLOSED: [2021-03-31 周三 21:05] DEADLINE: <2021-04-03 周六 21:00> SCHEDULED: <2021-03-29 周一 12:00>
@@ -129,7 +153,3 @@ CLOCK: [2021-03-31 周三 10:19]--[2021-03-31 周三 11:37] =>  1:18
 * Someday
 ** 学习《Unity3D 游戏开发》                                         :learn:
 ** 学习《Lua程序设计》                                               :learn:
-** 学习 org-mode                                                     :learn:
-:PROPERTIES:
-:LINK: [[https://orgmode.org/manual/index.html#SEC_Contents][org manual]]
-:END:
