--- a/src/org/note/emacs_note.org
+++ b/src/org/note/emacs_note.org
@@ -13,3 +13,25 @@
    pip install --upgrade
 ** windows下emacs无法找到spacemacs                                    :app:
    请设置环境变量$HOME为.emacs.d所在的目录，这样emacs才能找到配置文件
+** org-mode中timestamp的+1x, ++1x和.+1x                             :plugin:
+   - +1x :: 每次完成向后推迟一个间隔, 即便当前时间已经超过deadline.
+     #+BEGIN_EXAMPLE
+     如果状态为: TODO <2020-4-3 21:30 +1h>
+     而今天的时间为2021-4-3 9:20, <C-c><C-t>将任务变为DONE, 状态将变为
+     TODO <2020-4-3 22:30 +1h>
+     #+END_EXAMPLE
+   - ++1x :: 和+1x的区别在于, 如果当前时间已经超过deadline, 则会一次性将时间同步
+     到当前时间之后的最近设定间隔
+     #+BEGIN_EXAMPLE
+     如果状态为: TODO <2020-4-3 21:30 ++1h>
+     而今天的时间为2021-4-3 9:20, <C-c><C-t>将任务变为DONE, 状态将变为
+     TODO <2021-4-3 9:30 +1h>
+     #+END_EXAMPLE
+   - .+1x :: 和++1x的区别在于, 同步到以当前时间为基础的下个间隔, 而不是设定时间的
+     下个间隔
+     #+BEGIN_EXAMPLE
+     如果状态为: TODO <2020-4-3 21:30 .+1h>
+     而今天的时间为2021-4-3 9:20, <C-c><C-t>将任务变为DONE, 状态将变为
+     TODO <2021-4-3 10:20 .+1h>
+     #+END_EXAMPLE
+     
