--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -87,10 +87,10 @@ DEADLINE: <2021-04-10 周六 21:00> SCHEDULED: <2021-04-02 周五 09:00>
 CLOSED: [2021-04-02 周五 15:12] DEADLINE: <2021-04-02 周五 21:00>
 *** DONE 复刻简单游戏场景
 CLOSED: [2021-04-02 周五 22:02] DEADLINE: <2021-04-06 周二 21:00>
-*** TODO 渲染节点类
-DEADLINE: <2021-04-06 周二 21:00>
-*** TODO 对象生命周期管理
-DEADLINE: <2021-04-06 周二 21:00>
+*** DONE 渲染节点类
+CLOSED: [2021-04-03 周六 21:37] DEADLINE: <2021-04-06 周二 21:00>
+*** DONE 对象生命周期管理
+CLOSED: [2021-04-03 周六 21:37] DEADLINE: <2021-04-06 周二 21:00>
 *** WAIT 坐标系
 DEADLINE: <2021-04-07 周三 21:00>
 *** WAIT 触摸事件
