--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -27,12 +27,14 @@ SCHEDULED: <2021-04-05 周一 09:00 ++1w> DEADLINE: <2021-04-05 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#A] 归档并回顾一周的计划                                   :learn:
 DEADLINE: <2021-04-04 Sun 23:00 ++1w> SCHEDULED: <2021-04-04 Sun 6:00 ++1w>
-** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-04-04 周日 19:00 ++1d>
+** TODO [#C] 完成leetcode一两道题                                    :learn:
+SCHEDULED: <2021-04-06 Tue 19:00 ++1d>
 :PROPERTIES:
 :LINK: [[https://leetcode-cn.com][leetcode]]
-:LAST_REPEAT: [2021-04-03 周六 19:44]
+:LAST_REPEAT: [2021-04-04 Sun 10:09]
 :END:
+- State "DONE"       from "TODO"       [2021-04-04 Sun 10:09]
+- State "DONE"       from "TODO"       [2021-04-04 Sun 10:09]
 - State "DONE"       from "TODO"       [2021-04-03 周六 19:44]
 - State "DONE"       from "TODO"       [2021-04-03 Sat 00:50]
 - State "DONE"       from "TODO"       [2021-04-02 Fri 00:52]
@@ -78,31 +80,69 @@ CLOSED: [2021-03-31 周三 12:44] DEADLINE: <2021-04-03 周六 22:00>
 |   | earphone    |       |       |       |
 
 * Project
-** SCH [#A] 学习 利为游戏引擎                                       :learn:
+** SCH [#A] 学习 利为游戏引擎                                        :learn:
 DEADLINE: <2021-04-10 周六 21:00> SCHEDULED: <2021-04-02 周五 09:00>
 :PROPERTIES:
 :FILE: [[../ref/liwei_engine.org][利为引擎]]
+:BLOCKER:  consider(any) children
 :END:
 *** DONE 利为引擎环境搭建
 CLOSED: [2021-04-02 周五 15:12] DEADLINE: <2021-04-02 周五 21:00>
+:PROPERTIES:
+:TRIGGER: next-sibling scheduled!("++0h") todo!(TODO)
+:TRIGGER+: chain!("TRIGGER") chain!("BLOCKER")
+:BLOCKER: previous-sibling
+:END:
 *** DONE 复刻简单游戏场景
 CLOSED: [2021-04-02 周五 22:02] DEADLINE: <2021-04-06 周二 21:00>
+:PROPERTIES:
+:TRIGGER: next-sibling scheduled!("++0h") todo!(TODO) chain!("TRIGGER") chain!("BLOCKER")
+:BLOCKER: previous-sibling
+:END:
 *** DONE 渲染节点类
 CLOSED: [2021-04-03 周六 21:37] DEADLINE: <2021-04-06 周二 21:00>
+:PROPERTIES:
+:TRIGGER: next-sibling scheduled!("++0h") todo!(TODO) chain!("TRIGGER") chain!("BLOCKER")
+:BLOCKER: previous-sibling
+:END:
 *** DONE 对象生命周期管理
 CLOSED: [2021-04-03 周六 21:37] DEADLINE: <2021-04-06 周二 21:00>
-*** WAIT 坐标系
+:PROPERTIES:
+:TRIGGER: next-sibling scheduled!("++0h") todo!(TODO) chain!("TRIGGER") chain!("BLOCKER")
+:BLOCKER: previous-sibling
+:END:
+*** TODO 坐标系
 DEADLINE: <2021-04-07 周三 21:00>
+:PROPERTIES:
+:TRIGGER: next-sibling scheduled!("++0h") todo!(TODO) chain!("TRIGGER")
+:BLOCKER: previous-sibling
+:END:
 *** WAIT 触摸事件
 DEADLINE: <2021-04-07 周三 21:00>
+:PROPERTIES:
+:BLOCKER: previous-sibling
+:END:
 *** WAIT 定时器
 DEADLINE: <2021-04-08 周四 21:00>
+:PROPERTIES:
+:BLOCKER: previous-sibling
+:END:
 *** WAIT Action动画
 DEADLINE: <2021-04-08 周四 21:00>
+:PROPERTIES:
+:BLOCKER: previous-sibling
+:END:
 *** WAIT 动画类型简介
 DEADLINE: <2021-04-09 周五 21:00>
+:PROPERTIES:
+:BLOCKER: previous-sibling
+:END:
 *** WAIT Sprite3D简介
 DEADLINE: <2021-04-09 周五 21:00>
+:PROPERTIES:
+:BLOCKER: previous-sibling
+:TRIGGER+: parent todo!(DONE)
+:END:
 ** DONE [#B] 完成python150题 [100%]                                 :learn:
 CLOSED: [2021-04-01 周四 19:43] SCHEDULED: <2021-03-29 周一 11:00> DEADLINE: <2021-04-30 周五 21:00>
 *** DONE 完成1-30题
@@ -153,3 +193,4 @@ CLOCK: [2021-03-31 周三 10:19]--[2021-03-31 周三 11:37] =>  1:18
 * Someday
 ** 学习《Unity3D 游戏开发》                                         :learn:
 ** 学习《Lua程序设计》                                               :learn:
+** 学习org-edna                                                      :learn:
