--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -5,25 +5,45 @@
 
 * Inbox
 * Next Action
+** WAIT [#B] 购买家具用品 [0%]                                   :shopping:
+:PROPERTIES:
+:BLOCKER:  olp("live.org" "Project/找离公司近的新房子")
+:END:
+ - [ ] :: 床褥
+ - [ ] :: 牙膏牙刷
+ - [ ] :: 剪刀
+ - [ ] :: 水果刀
+ - [ ] :: 电热水壶
+ - [ ] :: 玻璃水杯
+ - [ ] :: 拖布
+ - [ ] :: 扫把和簸箕
+ - [ ] :: 桌子
+ - [ ] :: 人体工学椅子
+ - [ ] :: 路由器
+** WAIT [#C] 办理电信宽带业务                                       :event:
+:PROPERTIES:
+:BLOCKER:  olp("live.org" "Project/找离公司近的新房子")
+:END:
+DEADLINE: <2021-04-30 周五>
 ** WAIT [#C] 买键盘 [1/3]                                         :shopping:
 DEADLINE: <2021-04-06 Tue 23:59> SCHEDULED: <2021-04-03 周六 21:00>
 :PROPERTIES:
 :DEPENDENCE: 向大棠请教ps2转接口和打字键盘相关事宜
 :END:
-- [X] 游戏键盘
-- [ ] 打字键盘
+- [X] 红轴游戏键盘
+- [ ] 茶轴打字键盘
 - [ ] ps2转usb接口
-** TODO [#C] 给缺少硅胶保护的眼睛腿加套                           :shopping:
-DEADLINE: <2021-04-05 Mon 21:00> SCHEDULED: <2021-04-05 Mon 09:00>
-** WAIT 从家里把需要的物品邮寄过来
-SCHEDULED: <2021-04-25 Sun>
+** WAIT [#C] 从家里把需要的物品邮寄过来                             :event:
+DEADLINE: <2021-04-30 周五>
 :PROPERTIES:
-:DEPENDENCE: [[*找离公司近的新房子][找房]]
+:BLOCKER:  olp("live.org" "Project/找离公司近的新房子")
 :END:
 - [ ] 书籍
 - [ ] 鼠标
 - [ ] 手柄
 - [ ] Switch配件
+** DONE [#C] 给缺少硅胶保护的眼睛腿加套                          :shopping:
+CLOSED: [2021-04-05 周一 13:01] DEADLINE: <2021-04-05 Mon 21:00> SCHEDULED: <2021-04-05 Mon 09:00>
 * Appointment
 ** Archive                                                        :ARCHIVE:
 *** DONE [#C] 组装自行车                                            :event:
@@ -38,7 +58,7 @@ DEADLINE: <2021-04-05 周一 23:59> SCHEDULED: <2021-04-03 周六 12:00>
 *** DONE 买自行车水杯                                            :shopping:
 CLOSED: [2021-04-04 Sun 00:07] DEADLINE: <2021-04-03 周六 23:59>
 *** WAIT 领取保养好的自行车
-DEADLINE: <2021-04-05 Mon 22:00>
+DEADLINE: <2021-04-05 Mon 20:00>
 :PROPERTIES:
 :DEPENDENCE: 捷安特火炉山店老板通知
 :END:
@@ -50,24 +70,34 @@ SCHEDULED: <2021-04-06 周二 21:00> DEADLINE: <2021-04-25 周日>
 :PRICE: 2000以内
 :DISTANCE: 离公司10公里以内, 离地铁站2公里以内
 :BLOCKER: children
-:BLOCKER: 
+:TRIGGER:  olp("live.org" "Next Action/从家里把需要的物品邮寄过来") todo!(TODO) scheduled!("++0h")
+:TRIGGER+: olp("live.org" "Next Action/购买家具用品") todo!(TODO) scheduled!("++0h")
+:TRIGGER+: olp("live.org" "Next Action/办理电信宽带业务") todo!(TODO) scheduled!("++0h")
 :END:
 *** DONE app上看房
 CLOSED: [2021-04-05 Mon 09:05] DEADLINE: <2021-04-11 周日 21:00>
 :PROPERTIES:
 :TRIGGER: next-sibling scheduled!("++0h") todo!(TODO) chain!("TRIGGER")
 :END:
-*** TODO 联系中介或房主看房
-SCHEDULED: <2021-04-05 Mon 09:05> DEADLINE: <2021-04-18 周日 21:00>
+*** DONE 联系中介或房主看房
+CLOSED: [2021-04-05 周一 13:02] SCHEDULED: <2021-04-05 Mon 09:05> DEADLINE: <2021-04-18 周日 21:00>
 :PROPERTIES:
 :BLOCKER: previous-sibling
 :TRIGGER:  next-sibling scheduled!("++0h") todo!(TODO) chain!("TRIGGER")
 :END:
-*** WAIT 联系搬家公司搬家
-DEADLINE: <2021-04-25 Sun 21:00>
+- Note taken on [2021-04-05 周一 13:04] \\
+  位置: 黄浦区大壮国际g1-1018房. 阳面有阳台, 离万达和地铁不超过500m, 离公司7公里
+  价格: 2000元每月
+  面积: 29m²
+  设施: 冰箱, 洗衣机, 空调, 独卫, 电磁炉, 衣柜, 床
+  押金: 2个月房租
+  要求: 不能养宠物
+*** TODO 联系搬家公司搬家
+SCHEDULED: <2021-04-10 周六 12:00> DEADLINE: <2021-04-25 Sun 21:00>
 :PROPERTIES:
 :BLOCKER: previous-sibling
 :TRIGGER+: parent todo!(DONE)
+:TRIGGER:  next-sibling scheduled!("++0h") todo!(TODO) chain!("TRIGGER")
 :END:
 
 * Someday
