--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -6,11 +6,12 @@
 * Inbox
 * Next Action
 ** TODO [#A] 完成每日日报                                            :work:
-SCHEDULED: <2021-04-06 周二 19:00 ++1d> DEADLINE: <2021-04-06 Tue 21:20 ++1d>
+SCHEDULED: <2021-04-07 周三 19:00 ++1d> DEADLINE: <2021-04-07 周三 21:20 ++1d>
 :PROPERTIES:
-:LAST_REPEAT: [2021-04-03 Sat 00:52]
+:LAST_REPEAT: [2021-04-06 周二 20:47]
 :END:
 
+- State "DONE"       from "TODO"       [2021-04-06 周二 20:47]
 - Note taken on [2021-04-05 Mon 00:08] \\
   [2022-04-03 Sun]--[2021-04-05 Mon]清明假期
 - State "CANCELED"   from "TODO"       [2021-04-05 Sat 9:00]
@@ -42,12 +43,13 @@ DEADLINE: <2021-04-11 周日 23:00 ++1w> SCHEDULED: <2021-04-11 周日 06:00 ++1
   3. 完成了python的入职考试, python150题.
   4. 初步学习了一下利为引擎, 当然除了开始的几章还有例子可以参考, 后面写的太简略了.
   5. 自行车从家里邮过来之后组好, 送到车店保养.
-** TODO [#C] 完成leetcode一两道题                                    :learn:
-SCHEDULED: <2021-04-07 Wed 19:00 ++1d>
+** TODO [#C] 完成leetcode一两道题                                   :learn:
+SCHEDULED: <2021-04-08 周四 19:00 ++1d>
 :PROPERTIES:
 :LINK: [[https://leetcode-cn.com][leetcode]]
-:LAST_REPEAT: [2021-04-05 Mon 22:21]
+:LAST_REPEAT: [2021-04-06 周二 21:54]
 :END:
+- State "DONE"       from "TODO"       [2021-04-06 周二 21:54]
 - State "DONE"       from "TODO"       [2021-04-05 Mon 22:21]
 - State "DONE"       from "TODO"       [2021-04-04 Sun 10:09]
 - State "DONE"       from "TODO"       [2021-04-04 Sun 10:09]
@@ -57,12 +59,13 @@ SCHEDULED: <2021-04-07 Wed 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** TODO [#C] 学习 org-mode                                           :learn:
-SCHEDULED: <2021-04-06 Tue 19:00 ++1d>
+** TODO [#C] 学习 org-mode                                          :learn:
+SCHEDULED: <2021-04-07 周三 19:00 ++1d>
 :PROPERTIES:
 :LINK: [[https://orgmode.org/manual/index.html#SEC_Contents][org manual]]
-:LAST_REPEAT: [2021-04-05 Mon 22:55]
+:LAST_REPEAT: [2021-04-06 周二 21:04]
 :END:
+- State "DONE"       from "TODO"       [2021-04-06 周二 21:04]
 - State "DONE"       from "TODO"       [2021-04-05 Mon 22:55]
 - State "DONE"       from "TODO"       [2021-04-04 周日 14:36]
 - State "DONE"       from "TODO"       [2021-04-03 周六 15:56]
@@ -163,18 +166,22 @@ DEADLINE: <2021-04-07 周三 21:00> SCHEDULED: <2021-04-06 周二 09:00>
 :PROPERTIES:
 :BLOCKER: children
 :END:
-*** TODO 坐标系变换
-SCHEDULED: <2021-04-06 周二 10:00>
+*** DONE 坐标系变换
+CLOSED: [2021-04-06 周二 20:20] SCHEDULED: <2021-04-06 周二 10:00>
 :PROPERTIES:
 :TRIGGER: next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
-*** WAIT 触摸事件
+*** DONE 触摸事件
+CLOSED: [2021-04-06 周二 20:21] SCHEDULED: <2021-04-06 周二 20:20>
 :PROPERTIES:
 :BLOCKER: previous-sibling
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
-*** WAIT 定时器
+*** TODO 定时器
+SCHEDULED: <2021-04-06 周二 20:21>
 :PROPERTIES:
 :BLOCKER: previous-sibling
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
 *** WAIT Action
 :PROPERTIES:
