--- a/src/org/ref/liwei_engine.org
+++ b/src/org/ref/liwei_engine.org
@@ -28,7 +28,7 @@
       2. 调用Start()
 
 ** 注意点
-*** CNode对象AddChild和SetParent不会增加对象的引用计数.
+*** CNode对象AddChild和SetParent不会增加对象的引用计数
 如果认为创建了临时对象放到节点树中, 节点树会自动管理节点, 那你就想多了. 临时
 对象出了作用域会直接被释放, 必须使用Entrust持久化.
 *** 局部坐标系以左下角为原点.
@@ -36,6 +36,8 @@
 *** 节点渲染顺序
 对于任何一个节点, 先渲染所有z值小于等于0的节点, 然后渲染自身, 然后渲染大于0的节点.
 如果存在z值相同的兄弟, 则按加入树的顺序依序渲染.
+*** SetPos所处的坐标系永远是父节点的原始坐标, 而不是经过放缩后的
+*** GetChildren()返回的节点按z值从低到高排列
 *** 子类化触控事件时不要调用CreateWithFile函数
 调用静态方法生成的对象不是新类型的对象, InitWithFile函数
 *** 触控事件的触发顺序和节点渲染顺序相反
