--- a/src/org/ref/liwei_engine.org
+++ b/src/org/ref/liwei_engine.org
@@ -43,3 +43,5 @@
 *** 触控事件的触发顺序和节点渲染顺序相反
 *** SetScale放缩方向和你指定的锚点有关, (0,0)向右上, (1,1)向左下
 *** 在init.py中一定要将需要的库加入sys.path路径
+*** 一定要特别注意传入定时器对象内的对象是否为弱引用
+强引用非常容易导致进程阻塞
