--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -1,6 +1,6 @@
 #+STARTUP: INDENT LOGDONE OVERVIEW
 #+TAGS: { learn(l) work(w) }
-#+TODO: TODO(t) SCH(s) WAIT(w) | DONE(d) CANCELED(c)
+#+TODO: TODO(t) SCH(s) WAIT(w@) | DONE(d!) CANCELED(c!)
 
 
 * Inbox
@@ -8,6 +8,7 @@
 ** TODO [#A] 完成每日日报                                             :work:
 SCHEDULED: <2021-04-08 周四 19:00 ++1d> DEADLINE: <2021-04-08 周四 21:20 ++1d>
 :PROPERTIES:
+:STYLE: habit
 :LAST_REPEAT: [2021-04-07 周三 21:45]
 :END:
 
@@ -26,6 +27,7 @@ SCHEDULED: <2021-04-08 周四 19:00 ++1d> DEADLINE: <2021-04-08 周四 21:20 ++1
 ** TODO [#A] 完成每周周报                                            :work:
 SCHEDULED: <2021-04-12 周一 09:00 ++1w> DEADLINE: <2021-04-12 周一 12:00 ++1w>
 :PROPERTIES:
+:STYLE: habit
 :LAST_REPEAT: [2021-04-06 周二 09:23]
 :END:
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
@@ -35,6 +37,7 @@ SCHEDULED: <2021-04-12 周一 09:00 ++1w> DEADLINE: <2021-04-12 周一 12:00 ++1
 ** TODO [#A] 归档并回顾一周的计划                                   :learn:
 DEADLINE: <2021-04-11 周日 23:00 ++1w> SCHEDULED: <2021-04-11 周日 06:00 ++1w>
 :PROPERTIES:
+:STYLE: habit
 :LAST_REPEAT: [2021-04-04 周日 21:18]
 :END:
 - State "DONE"       from "TODO"       [2021-04-04 周日 21:18]
@@ -44,12 +47,14 @@ DEADLINE: <2021-04-11 周日 23:00 ++1w> SCHEDULED: <2021-04-11 周日 06:00 ++1
   3. 完成了python的入职考试, python150题.
   4. 初步学习了一下利为引擎, 当然除了开始的几章还有例子可以参考, 后面写的太简略了.
   5. 自行车从家里邮过来之后组好, 送到车店保养.
-** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-04-08 周四 19:00 ++1d>
+** TODO [#C] 完成leetcode一两道题                                    :learn:
+SCHEDULED: <2021-04-09 Fri 19:00 ++1d>
 :PROPERTIES:
 :LINK: [[https://leetcode-cn.com][leetcode]]
-:LAST_REPEAT: [2021-04-06 周二 21:54]
+:STYLE: habit
+:LAST_REPEAT: [2021-04-07 Wed 23:33]
 :END:
+- State "DONE"       from "TODO"       [2021-04-07 Wed 23:33]
 - State "DONE"       from "TODO"       [2021-04-06 周二 21:54]
 - State "DONE"       from "TODO"       [2021-04-05 Mon 22:21]
 - State "DONE"       from "TODO"       [2021-04-04 Sun 10:09]
@@ -60,12 +65,14 @@ SCHEDULED: <2021-04-08 周四 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** TODO [#C] 学习 org-mode                                          :learn:
-SCHEDULED: <2021-04-08 周四 19:00 ++1d>
+** TODO [#C] 学习 org-mode                                           :learn:
+SCHEDULED: <2021-04-09 Fri 19:00 ++1d/2d>
 :PROPERTIES:
 :LINK: [[https://orgmode.org/manual/index.html#SEC_Contents][org manual]]
-:LAST_REPEAT: [2021-04-07 周三 12:18]
+:STYLE: habit
+:LAST_REPEAT: [2021-04-08 Thu 00:21]
 :END:
+- State "DONE"       from "TODO"       [2021-04-08 Thu 00:21]
 - State "DONE"       from "TODO"       [2021-04-07 周三 12:18]
 - State "DONE"       from "TODO"       [2021-04-06 周二 21:04]
 - State "DONE"       from "TODO"       [2021-04-05 Mon 22:55]
@@ -164,7 +171,7 @@ CLOSED: [2021-03-31 周三 12:44] DEADLINE: <2021-04-03 周六 22:00>
 
 * Project
 ** SCH 完成利为引擎各个模块的demo                                   :learn:
-DEADLINE: <2021-04-07 周三 21:00> SCHEDULED: <2021-04-06 周二 09:00>
+DEADLINE: <2021-04-08 Thu 21:00> SCHEDULED: <2021-04-06 周二 09:00>
 :PROPERTIES:
 :BLOCKER: children
 :END:
@@ -179,17 +186,23 @@ CLOSED: [2021-04-06 周二 20:21] SCHEDULED: <2021-04-06 周二 20:20>
 :BLOCKER: previous-sibling
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
-*** TODO 定时器
-SCHEDULED: <2021-04-06 周二 20:21>
+*** DONE 定时器
+CLOSED: [2021-04-07 Wed 23:30] SCHEDULED: <2021-04-06 周二 20:21>
 :PROPERTIES:
 :BLOCKER: previous-sibling
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
-*** WAIT Action
+*** TODO Action
+SCHEDULED: <2021-04-07 Wed 23:30>
+:PROPERTIES:
+:BLOCKER: previous-sibling
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** WAIT 动画
 :PROPERTIES:
 :BLOCKER: previous-sibling
 :END:
-*** WAIT 动画
+*** WAIT 3d
 :PROPERTIES:
 :BLOCKER: previous-sibling
 :TRIGGER+: parent todo!(DONE)
